# reddio-sdk

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ReddioCrypto.xcframework.yaml  java-sdk-integration-tests.yaml  java-sdk-tests.yaml  java-sdk-unit-tests.yaml  java-sdk.yaml  reddio-java-release-maven-central.yaml  unity-plugin-zip.yaml
crypto/: Cargo.toml
crypto-csharp/reddio.crypto/: reddio.cs
crypto-csharp/reddio.tests.crypto/: reddit_test.cs
crypto-go/: go.mod  lib.go  lib_test.go
crypto/src/: curve.rs  errno.rs  exports.rs  hash.rs  lang_item.rs  lib.rs
examples/ReddioSDKUnityExample/: .gitignore  README.md
examples/ReddioSDKUnityExample/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
examples/ReddioSDKUnityExample/UserSettings/: EditorUserSettings.asset  (+1 more)
reddio/: Cargo.toml
reddio-csharp/: crypto-csharp.sln
reddio-csharp/reddio.api/: Versions.cs  reddio.api.csproj
reddio-csharp/reddio.crypto/: reddio.cs
reddio-csharp/reddio.tests.api/: reddio.tests.api.csproj
reddio-csharp/reddio.tests.crypto/: reddio.tests.crypto.csproj  reddit_test.cs
reddio-go/: go.mod  lib.go  lib_test.go
reddio-java/: .gitignore  pom.xml
reddio-java/reddio-api/: pom.xml
reddio-java/reddio-crypto/: pom.xml
reddio-java/reddio-java-sdk/: pom.xml
reddio-swift/: Makefile  README.md  build.sh
reddio-swift/include/: module.modulemap
reddio-unity/: .gitignore
reddio-unity/ProjectSettings/: ProjectSettings.asset
reddio/src/: errno.rs  exports.rs  hash.rs  lib.rs
script/reddio-linux/: Dockerfile  README.md
(+245 files in other folders)
