[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "crypto"
crate-type = ["staticlib", "cdylib"]

[dependencies]
starknet-crypto = "0.1"
starknet-ff = "0.1"
anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"
elliptic-curve = "0.12"
log = "0.4.17"
env_logger = "0.9.0"
